feat:debug http local proxy